Bug 688269 - stroking: Wrong line join, issue 2 : PDF 1.5 differs from PDF 1.4
Summary: stroking: Wrong line join, issue 2 : PDF 1.5 differs from PDF 1.4
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: Graphics Library (show other bugs)
Version: 0.00
Hardware: PC Windows XP
: P3 normal
Assignee: Robin Watts
URL:
Keywords: bountiable
Depends on:
Blocks:
 
Reported: 2005-08-17 06:20 UTC by Igor Melichev
Modified: 2009-11-12 16:17 UTC (History)
0 users

See Also:
Customer:
Word Size: ---


Attachments
jointest3.ps (2.73 KB, application/postscript)
2009-11-11 13:18 UTC, Robin Watts
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Igor Melichev 2005-08-17 06:20:39 UTC
With round join, PLRM3 and PDF 1.4 requires to paint a full round, but PDF 1.5 
requires to paint a "pieslice-shaped figure". IMO we should do the latter in 
any case to simplify the implementation - likely "full round" is now obsolete 
and gives either the same or a worse result.

This problem is related to the bug 688126, but we consider it as an independent 
problem, because it's a difference between Postscript and PDF.
Comment 1 Ralph Giles 2009-10-13 11:33:10 UTC
Note that Adobe Reader, Apple Preview and the cairo library use the new 'pie'
style round join, even for PDF-1.4 input. PDF < 1.5 and PLRM specs all warn
about the rendering issues with painting the full round.

So direct spec compliance with Postscript is the only situation that warrants
the full round join.
Comment 2 Robin Watts 2009-11-11 13:00:39 UTC
Reassigning to me, as I have a patch for this in testing.
Comment 3 Robin Watts 2009-11-11 13:18:53 UTC
Created attachment 5658 [details]
jointest3.ps

This file shows a variety of joins. In particular, it shows round joins between
some very short strokes, both in stroked and strokepath modes.

The "stroked" version shows up as full round in ghostscript, but as a pie join
in every other renderer we've tried (adobe acrobat 9, CPSI, Jaws etc).

The "stroked path" version appears to always show as a full round, in Acrobat
and Jaws at least.

Ghostscript was changed recently to always use CPSI_mode for strokepaths. This
leaves us free to change the stroke code to use 'pie' shaped rounds and we
should get exactly what we want.
Comment 4 Robin Watts 2009-11-12 16:17:44 UTC
Revision 10320 contains a patch to fix this.