This patch fixes Bug 688269, by making ghostscript use pie joins rather than round ones when stroking in non CPSI_mode.

This produces 3000 or so bitmap diffs, but after leaving my machine running
all night generating lots of diffs for me to examine this morning, they all
look like stray pixel changes (i.e. differences caused by rounding).

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@10320 a1074d23-0009-0410-80fe-cf8c14f379e6